cabal-version:      2.4
name:               trust-chain
version:            0.1.0.0
category:           Cryptography, Crypto
synopsis:           An implementation of a trust chain
license:            MIT
description:        An implementation of a trust chain.
author:             Samuel Schlesinger
maintainer:         sgschlesinger@gmail.com
extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/samuelschlesinger/trust-chain

library
    exposed-modules: Data.TrustChain
    build-depends:
      , base >=4.6 && <5
      , network >=3.1 && <4
      , binary >=0.8 && <1
      , bytestring >=0.11 && <1
      , text >=1.2 && <2
      , containers >=0.6 && <1
      , cropty >=0.1
      , merge >=0.1
    hs-source-dirs:   src
    default-language: Haskell2010
